# concurrent-collect

./: Cargo.toml  README.md
benches/: collect.rs
src/: lib.rs
